--- a/hammer2.conf
+++ b/hammer2.conf
@@ -5,7 +5,7 @@
 	</head>
 	<body id="dt_example">
 		<div id="container" align="center">
-		 <img SRC = "img/odin.png" >
+		 <img src="img/odin.png" width="150" height="150" >
 			
 			<h1>0d1n's Output table</h1>
 			<div id="dynamic">
