add fancybox in syntax highlighter

--- a/hammer1.conf
+++ b/hammer1.conf
@@ -13,8 +13,11 @@
 		</style>
 		<script type="text/javascript" language="javascript" src="media/js/jquery.js"></script>
 		<script type="text/javascript" language="javascript" src="media/js/jquery.dataTables.js"></script>
+		<script type="text/javascript" src="source/jquery.fancybox.js?v=2.1.5"></script>
+		<link rel="stylesheet" type="text/css" href="source/jquery.fancybox.css?v=2.1.5" media="screen" />
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function() {
+				$('.fancybox').fancybox();
 				var oTable = $('#example').dataTable( {
                                          "bJQueryUI": true,
 					"bProcessing": true,
