improve hardening in makefile

--- a/0d1n_viewer/Makefile
+++ b/0d1n_viewer/Makefile
@@ -1,6 +1,7 @@
 CC=gcc
 CFLAGS=-Wall -Wextra -Wno-unknown-pragmas -O2 
 DFLAGS=-DMG_ENABLE_SSL -DMG_DISABLE_PFS lib/libmongoose/mongoose.c lib/BSD/strsec.c lib/frozen/frozen.c 
+HARDENING= -mmitigate-rop -fstack-protector-all -pie -fPIE -ftrapv
 DIR=src/
 DIROUT=bin/
 UNAME_S := $(shell uname -s)
@@ -13,7 +14,7 @@ LDFLAGS=-lpthread -lcrypto -lssl -lm
 0d1n_view: $(DIR)0d1n_view.c 
 	@echo "Compile... "
 	$(CC) $(CFLAGS) $(DFLAGS) -c $(DIR)*.c 
-	$(CC) -o $(DIROUT)0d1n_view *.o $(LDFLAGS)
+	$(CC) -o $(DIROUT)0d1n_view *.o $(LDFLAGS) $(HARDENING)
 	rm *.o
 	@echo "end  "
 	@echo " Next step, execute \"bin/0d1n_view\" to start...  "   
