Add thread pool resources, improve the source code, fix a lot bugs...

--- a/0d1n_viewer/Makefile
+++ b/0d1n_viewer/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-Wall -Wextra -Wno-unknown-pragmas -O2 
 DFLAGS=-DMG_ENABLE_SSL -DMG_DISABLE_PFS lib/libmongoose/mongoose.c lib/BSD/strsec.c lib/frozen/frozen.c 
-HARDENING= -mmitigate-rop -fstack-protector-all -pie -fPIE -ftrapv
+HARDENING= -fstack-protector-all -pie -fPIE
 DIR=src/
 DIROUT=bin/
 UNAME_S := $(shell uname -s)
