Insert measure of request and response, to use in blind attacks, this is util to show in datatables results

--- a/templates/hammer2.conf
+++ b/templates/hammer2.conf
@@ -17,6 +17,7 @@
 			<th width="90%">Params</th>
 			<th width="20%">Grep</th>
 			<th width="40%">Payload</th>
+			<th width="3%">Time</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -29,6 +30,7 @@
 			<th>Params</th>
 			<th>Grep</th>
 			<th>Payload</th>
+			<th>Time</th>
 		</tr>
 	</tfoot>
 </table>
